# MT-Poker-Simulator

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: CardDeck.h  Game.h  Player.h  Pot.h  Table.h  gameState.h
resources/qml/: mainMenu.qml  mainWindow.qml  playGame.qml  rewards.qml  settings.qml  stats.qml  tutorial.qml
src/: CardDeck.cpp  Game.cpp  Player.cpp  Pot.cpp  Table.cpp  gameState.cpp  main.cpp
